--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -17,6 +18,5 @@
     "nodemon": "^2.0.22",
     "sequelize": "^6.30.0",
     "sequelize-cli": "^6.6.0"
-    
   }
 }
